# hex-assistant

./: .gitignore  README.md  index.html  lol-hex-assistant-acceptance.md  lol-hex-assistant-design.md  mise.toml  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
docs/new-project/: 01-product-requirements.md  02-architecture-and-tech-selection.md  03-acceptance-and-risks.md
scripts/: eval-rapidocr.mjs  ocr_sidecar.py  replay-ocr-debug.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  ocr_engine.rs
