[package]
name = "lol-hex-assistant"
version = "0.1.0"
description = "LOL 海克斯乱斗助手截图诊断 Demo"
authors = ["hex-assistant"]
edition = "2021"

[lib]
name = "lol_hex_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
os_info = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
thiserror = "1"

[target.'cfg(windows)'.dependencies]
image = "0.25"
xcap = "0.9.4"
