[package]
name = "screen-capture-diagnostic"
version = "0.1.0"
description = "屏幕截图诊断 Demo"
authors = ["capture-diagnostic"]
edition = "2021"

[lib]
name = "screen_capture_diagnostic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
os_info = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "1"

[target.'cfg(windows)'.dependencies]
xcap = "0.9.4"
